# VibeVoice

./: .gitignore  README.md  batch_tts_processor.py  pyproject.toml  vibeVoice_cli.py
audio_outputs/: manifest.json
demo/: gradio_demo.py  inference_from_file.py
vibevoice/modular/: modeling_vibevoice_inference.py
