[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vibevoice"
version = "0.0.1"
authors = [
  { name="vibevoice team", email="vibepod@microsoft.com" },
]
description = "A model for speech generation with an AR + diffusion architecture."
readme = "README.md"
requires-python = "==3.11.12"
classifiers = [
    "Programming Language :: Python :: 3",
    # "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch",
    "accelerate==1.6.0",
    "transformers==4.51.3", # we develop this project on transformers==4.51.3, later version may not be compatible
    "llvmlite>=0.40.0",
    "numba>=0.57.0",
    "diffusers",
    "tqdm",
    "numpy",
    "scipy",
    "librosa",
    "ml-collections",
    "absl-py",
    "gradio",
    "av",
    "aiortc",
    "setuptools>=80.9.0",
    "flash-attn",
    "triton-windows<3.4",
]


[project.urls]
"Homepage" = "https://github.com/microsoft/VibeVoice"
"Bug Tracker" = "https://github.com/microsoft/VibeVoice/issues"

[tool.setuptools.packages.find]
where = ["."]


[project.optional-dependencies]
cu128 = [
  "torch==2.7.1",
  "torchvision==0.22.1",
  "torchaudio==2.7.1"
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", extra = "cu128" },
]
torchvision = [
  { index = "pytorch-cu128", extra = "cu128" },
]
torchaudio = [
  { index = "pytorch-cu128", extra = "cu128" },
]
flash-attn = { path = "flash_attn-2.7.4+cu128torch2.7-cp311-cp311-win_amd64.whl" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
